--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
         curl -s -X POST "https://api.telegram.org/bot${{ secrets.TG_BOT_TOKEN }}/sendMessage" \
         -d chat_id="${{ secrets.TG_CHAT_ID }}" \
         -d text="🚀 *Starting Build: ${{ github.event.inputs.rom_name }}*\n━━━━━━━━━━━━━━━━━━━━\n\
-📱 *Device:* `${{ github.event.inputs.device_codename }}` ( ${{ github.event.inputs.device_name }} )\n\
+ *Device:* `${{ github.event.inputs.device_codename }}` ( ${{ github.event.inputs.device_name }} )\n\
 ⚙️ *Variant:* `${{ github.event.inputs.lunch_combo }}`\n🕒 Time: $(date -u +%Y-%m-%d\ %H:%M UTC)\n━━━━━━━━━━━━━━━━━━━━\n\
 🔧 *Status:* Compilation started via GitHub Actions..." \
         -d parse_mode="Markdown"
