Update Android ROM Builder.yml

--- a/.github/workflows/Android ROM Builder.yml
+++ b/.github/workflows/Android ROM Builder.yml
@@ -2,6 +2,9 @@ name: Android ROM Builder
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+       - main
     inputs:
       rom_name:
         description: 'ROM Name (e.g. RisingOS, AfterlifeOS)'
