--- a/.github/workflows/Android ROM Builder.yml
+++ b/.github/workflows/Android ROM Builder.yml
@@ -65,7 +65,7 @@ jobs:
           
           # Install essential build packages.
           sudo apt-get update
-          sudo apt-get install -y git-lfs git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libxml2-utils xsltproc libxml2-dev libtinfo5 libncurses5 liblz4-tool lz4 imagemagick ccache schedtool libssl-dev python3.10 python3-pip openjdk-11-jdk
+          sudo apt-get install -y git-lfs git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libxml2-utils xsltproc libxml2-dev liblz4-tool lz4 imagemagick ccache schedtool libssl-dev python3.10 python3-pip openjdk-11-jdk
 
       - name: Configure Git
         run: |
