--- a/.github/workflows/Android ROM Builder.yml
+++ b/.github/workflows/Android ROM Builder.yml
@@ -1,117 +1,60 @@
-# This workflow automates the building of an Android Custom ROM.
-# It is triggered manually via the GitHub Actions UI.
+name: Build Custom ROM
 
-name: Android ROM Build
-
-# The workflow will be triggered manually from the "Actions" tab in your repository.
 on:
   workflow_dispatch:
-    inputs:
-      rom_branch:
-        description: 'The branch of the ROM source to build (e.g., "lineage-20")'
-        required: true
-        default: 'lineage-20'
-      device_codename:
-        description: 'The device codename (e.g., "surya")'
-        required: true
-        default: 'surya'
-      lunch_combo:
-        description: 'The lunch combo to use (e.g., "lineage_surya-userdebug")'
-        required: true
-        default: 'lineage_surya-userdebug'
-      rom_repo:
-        description: 'The URL of the ROM source repository'
-        required: true
-        default: 'https://github.com/LineageOS/android.git'
-      device_vendor:
-        description: 'The device vendor name (e.g., "xiaomi")'
-        required: true
-        default: 'xiaomi'
-      device_tree_repo:
-        description: 'The URL of the device tree repository'
-        required: true
-        default: 'https://github.com/LineageOS/android_device_xiaomi_surya.git'
-      device_tree_branch:
-        description: 'The branch of the device tree'
-        required: true
-        default: 'lineage-20'
-      vendor_repo:
-        description: 'The URL of the vendor repository'
-        required: true
-        default: 'https://github.com/LineageOS/android_vendor_xiaomi_surya.git'
-      vendor_branch:
-        description: 'The branch of the vendor source'
-        required: true
-        default: 'lineage-20'
+  push:
+    branches:
+      - main
 
 jobs:
   build:
+    name: Build ROM
     runs-on: ubuntu-latest
-    
+
+    env:
+      ROM_NAME: Porject Infinity X
+      DEVICE_CODENAME: a32x
+      BUILD_TYPE: userdebug
+      TZ: Asia/Taipei
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: ⏱️ Set up build environment
+      run: |
+        sudo apt update
+        sudo apt install -y bc bison build-essential curl flex git gnupg gperf libncurses5-dev \
+          libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools \
+          xsltproc zip zlib1g-dev openjdk-11-jdk
 
-      - name: Set up Build Environment
-        # The build process requires a lot of memory, so we'll increase the swap space.
-        run: |
-          sudo swapoff -a
-          sudo fallocate -l 16G /swapfile
-          sudo chmod 600 /swapfile
-          sudo mkswap /swapfile
-          sudo swapon /swapfile
-          df -h
-          free -h
-          
-          # Install essential build packages.
-          sudo apt-get update
-          sudo apt-get install -y git-lfs git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libxml2-utils xsltproc libxml2-dev liblz4-tool lz4 imagemagick ccache schedtool libssl-dev python3.10 python3-pip openjdk-11-jdk
+    - name: 🧹 Clean workspace
+      run: |
+        rm -rf ~/rom
+        mkdir -p ~/rom
+        cd ~/rom
 
-      - name: Configure Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-      - name: Install Repo
-        run: |
-          mkdir -p ~/.bin
-          curl -s 'https://storage.googleapis.com/git-repo-downloads/repo' > ~/.bin/repo
-          chmod a+x ~/.bin/repo
-          PATH=~/.bin:$PATH
-          
-      - name: Initialize Repo
-        run: |
-          repo init -u ${{ inputs.rom_repo }} -b ${{ inputs.rom_branch }} --git-lfs --depth=1
-          
-      - name: Sync Source Code
-        run: |
-          repo sync -j$(nproc --all) --force-sync --no-tags --no-clone-bundle
+    - name: 📥 Clone ROM source
+      run: |
+        git config --global user.name "GitHub Builder"
+        git config --global user.email "builder@github.com"
+        repo init --depth=1 --no-repo-verify --git-lfs -u https://github.com/ProjectInfinity-X/manifest -b 16 -g default,-mips,-darwin,-notdefault
+        repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j$(nproc --all)
+        
+    - name: 📦 Clone device, vendor, kernel trees
+      run: |
+        git clone -b twrp https://github.com/Yenping0001/android_device_samsung_a32x.git device/samsung/a32x
+        git clone -b master https://github.com/Yenping0001/vendor_samsung_a32x.git vendor/samsung/a32x
+        git clone https://github.com/Yenping0001/android_kernel_samsung_a32x.git kernel/samsung/a32x
 
-      - name: Clone Device Tree
-        # The device tree is essential for the build and needs to be placed in the correct directory.
-        run: |
-          git clone --depth=1 ${{ inputs.device_tree_repo }} -b ${{ inputs.device_tree_branch }} device/${{ inputs.device_vendor }}/${{ inputs.device_codename }}
+    - name: 🧰 Setup environment
+      run: |
+        source build/envsetup.sh
+        lunch infinity_a32x-userdebug
 
-      - name: Clone Vendor Source
-        # The vendor source contains proprietary files required for the build.
-        run: |
-          git clone --depth=1 ${{ inputs.vendor_repo }} -b ${{ inputs.vendor_branch }} vendor/${{ inputs.device_vendor }}/${{ inputs.device_codename }}
-          
-      - name: Set up ccache
-        run: |
-          export CCACHE_DIR=/home/runner/.ccache
-          export USE_CCACHE=1
-          ccache -M 50G
-          
-      - name: Build ROM
-        run: |
-          source build/envsetup.sh
-          lunch ${{ inputs.lunch_combo }}
-          mka bacon -j$(nproc --all)
+    - name: 🔨 Build ROM
+      run: |
+        make bacon -j$(nproc --all) otapackage
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ inputs.device_codename }}-rom
-          path: out/target/product/${{ inputs.device_codename }}/*.zip
-          retention-days: 7
+    - name: 📤 Upload ROM artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ROM-${DEVICE_CODENAME}
+        path: out/target/product/${DEVICE_CODENAME}/*.zip
